Revision history for Perl extension Module::Build.

0.36_11 - 

0.36_10 - Wed May 19 18:36:06 EDT 2010

  Bug fixes:

  - Fix failing t/manifypods.t on Windows from 0.36_09 changes [Klaus
    Eichner]

0.36_09 - Tue May 11 09:19:12 EDT 2010

  Bug fixes:

  - Improve HTML documentation generation on ActivePerl (RT#53478)
    [Scott Renner and Klaus Eichner]

0.36_08 - Mon Apr 26 08:00:15 EDT 2010

 Enhancements:

 - Give a list of valid licenses when given one we don't recognize
   (RT#55951) [Yanick Champoux]

 - Added 'Build manifest_skip' action to generate a default MANIFEST.SKIP
   [David Golden]

 Changes:

 - When temporarily generating a MANIFEST.SKIP when none exists, it will
   be removed on exit instead of hanging around until 'Build clean'.  This
   is less surprising/confusing and the 'Build manifest_skip' action
   is now available instead to bootstrap the file [David Golden]

 Bug fixes:

 - Fixed runtime error on cygwin when searching for an executable command
   during installdeps testing [David Golden]

0.3607 - Thu Apr  1 11:27:16 EDT 2010

 Bug fixes:

 - The 'dist' action now always ensures a clean dist directory before
   creating the tarball [David Golden]

0.36_06 - Thu Apr  1 01:23:58 EDT 2010

 Other:

 - Migrated repository to git and updated META.yml to match

 - Removed bugtracker URL (let search.cpan.org use default)

 - Disabled SIGNATURE generation

0.3605 - Wed Mar 31 12:05:11 EDT 2010

 - No changes from 0.36_04

0.36_04 - Tue Mar 16 21:41:41 EDT 2010

 Bug fixes:

 - Added missing newline to "Changing sharpbang" messages under verbose
   output (RT#54474) [David Golden]

 - Added 'beos' to list of Unix-like os types (RT#53876) [Nigel Horne]

 - Sets $ENV{HOME} to a temporary directory during testing [David Golden]

 - For VMS: fixed prefix handling plus other test fixes [Craig Berry]

 - Support anonymous array of directories for c_source [Alberto Simões]

 - Small POD formatting fix [James Keenan]
